--- a/views/confirm-email.html
+++ b/views/confirm-email.html
@@ -7,10 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-<h2>Confirm verification email!</h2>
+  <h2>Confirm verification email!</h2>
 
-<p><a href="{{confirm_url}}">Click here!</a> to verification your email</p>
+  <p>
+    <a href="{{confirm_url}}">Click here</a> to verification your email
+  </p>
 
-<h4>contact us</h4>
+  <h4>contact us</h4>
 </body>
 </html>
